namespaces/live.cloud-platform.service.justice.gov.uk/laa-hmrc-interface-uat/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: laa-hmrc-interface-uat
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "uat"
    cloud-platform.justice.gov.uk/namespace: "laa-hmrc-interface-uat"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "apply-dev"
    cloud-platform.justice.gov.uk/application: "LAA-HMRC Interface Service API"
    cloud-platform.justice.gov.uk/owner: "Apply: apply-for-civil-legal-aid@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-hmrc-interface-service-api"
    cloud-platform.justice.gov.uk/team-name: "laa-apply-for-legal-aid"
    cloud-platform.justice.gov.uk/review-after: ""
